--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 29
@@ -28,9 +29,11 @@ dependencies {
     def material_version = "1.1.0-rc02"
     def nav_version = "2.3.0-alpha03"
     def facebook_version = "[5,6)"
-    def facebook_sdk_version = "[4,5)"
     def google_version = "16.0.0"
     def circle_image_view_version = "3.1.0"
+    def firebase_version = "19.3.2"
+    def firebase_google_auth_version = "18.1.0"
+    def lifecycle_version = "2.2.0"
 
     //material
     implementation "com.google.android.material:material:$material_version"
@@ -41,7 +44,6 @@ dependencies {
 
     //facebook
     implementation "com.facebook.android:facebook-login:$facebook_version"
-//    implementation "com.facebook.android:facebook-android-sdk:$facebook_sdk_version"
 
     //google
     implementation "com.google.android.gms:play-services-auth:$google_version"
@@ -49,12 +51,25 @@ dependencies {
     //circle imageview
     implementation "de.hdodenhof:circleimageview:$circle_image_view_version"
 
+    //firebase
+    implementation "com.google.firebase:firebase-auth:$firebase_version"
+
+    //firebase auth google
+    implementation "com.google.android.gms:play-services-auth:$firebase_google_auth_version"
+
+    //view model
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    // LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+
+
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.1'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.firebase:firebase-auth:19.3.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
