--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,12 +5,15 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".dagger.MyApplication"
         android:allowBackup="true"
         android:icon="@drawable/iconapplight"
         android:label="@string/app_name"
         android:roundIcon="@drawable/iconapplight"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar">
+        android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"
+        android:usesCleartextTraffic="true"
+        android:requestLegacyExternalStorage="true">
         <activity android:name=".menu.MenuActivity"></activity>
         <activity android:name=".user.UserActivity" />
         <activity android:name=".MainActivity">
