--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,13 @@
         android:allowBackup="true"
         android:icon="@drawable/iconapplight"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@drawable/iconapplight"
         android:supportsRtl="true"
         android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"
-        android:usesCleartextTraffic="true"
-        android:requestLegacyExternalStorage="true">
-        <activity android:name=".menu.MenuActivity"></activity>
+        android:usesCleartextTraffic="true">
+        <activity android:name=".chat.ChatActivity"></activity>
+        <activity android:name=".menu.MenuActivity" />
         <activity android:name=".user.UserActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
